--- a/main.ipynb
+++ b/main.ipynb
@@ -1672,6 +1672,8 @@
    "source": [
     "В обоих случаях коэффициенты $\\lambda_i$ сходятся, в случае линейно разделимой выборки опорных нарушителей не оказалось - это логично, мы генерировали датасет без выбросов.\n",
     "\n",
+    "На графике сходимости коэффициентов четко видны $\\lambda_i$, сходящиеся к 0 - элементы, соответствующие этим $\\lambda_i$ будут считаться периферийными и не будут оказывать влияния на работу модели.\n",
+    "\n",
     "Полученное распределение различных типов объектов в пространстве признаков также согласуется логикой: периферийные объекты оказываются в толще своего класса, опорные - ближе к границе раздела."
    ]
   },
