--- a/main.ipynb
+++ b/main.ipynb
@@ -1878,6 +1878,7 @@
     "- SVM, использующий ядерный трюк - один из лучших методов бинарной классификации\n",
     "- оба способа реализации SVM сходятся и дают неплохую точность (при использовании правильных ядер) на рассмотренных задачах\n",
     "- переход к двойственной задаче в методе опорных векторов лучше тем, что позволяет обобщить метод на произвольные ядра\n",
+    "- возможное улучшение моих реализаций: более умный способ поиска коэффициентов (как минимум использование backtracking в градиентном спуске)\n",
     "\n",
     "**Преимущества и проблемы SVM**\n",
     "\n",
